2002-10-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/command/diagramitem.py: Added commands for placing
	diagram items on the canvas.
	* Lots of improvements everywhere.

2002-10-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* configure.in, acinclude.m4: updated checks to use
	pygtk.require('2.0').
	* gaphor/diagram/diagramitemfactory.py: removed items can be
	created through gaphor.UML.Diagram.create().
	* gaphor/ui/command/diagramitem.py: new file. commands for creating
	canvas items is stored here.
	* gaphor/diagram/placementtool.py: Use 0.9.0 (CVS) version of
	DiaCanvas2.
	* gaphor/UML/diagram.py: added create() for creating nice model
	elements.

2002-10-08  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/placementtool.py: moved to gaphor/diagram.
	* gaphor/ui/treeview.py, gaphor/ui/windowfactory.py: removed.
	* gaphor/ui/command/file.py: renamed to main.py, commands for the main
	window.
	* gaphor/ui/command/about.py: removed, command is moved to main.py.
	* gaphor/ui/command/tree.py: renamed to mainpopup.py.
	* gaphor/plugin.py: New file. framework for plugins.
	* gaphor/ui/command/commandinfo.py: New file. meta-info for commands.
	* gaphor/ui/commandregistry.py: Registry for commands. UI menus are
	created here.

2002-09-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/abstractwindow.py: superclass for all window shells.
	 Now in CVS.
	* autogen.sh, configure.in: Added some small fixes by worbell.

2002-09-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/feature.py: checked classmember.py to feature.py.
	  Closer resemblance of the UML metamodel.
	* gaphor/UML/element.py, gaphor/UML/sequence.py: Added OCL methods
	  from SMW <http://www.abo.fi/~iporres/Projects/fog0000000023.html>
	* Several changes to create a Bonobo UI.

2002-09-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data: New directory, shared data will be put here.
	* data/pixmaps: New directory, icons have moved from gaphor/ui/icons