@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(gaphor, 0.1.0)
+AC_INIT(gaphor, 0.2.0)
 
 AC_CONFIG_SRCDIR([gaphor/gaphor.py])
 
