@@ -1,5 +1,7 @@
 SUBDIRS = pixmaps
 
 pkgdata_DATA = \
-	gaphor-ui.xml
+	gaphor-ui.xml \
+	gaphor-diagram-ui.xml
 
+EXTRA_DIST = $(pkgdata_DATA)
