@@ -1,5 +1,7 @@
 gaphor/__init__.py
 gaphor/gaphor.py
+gaphor/config.py
+gaphor/plugin.py
 gaphor/UML/__init__.py
 gaphor/UML/enumeration.py
 gaphor/UML/sequence.py
@@ -7,35 +9,39 @@ gaphor/UML/element.py
 gaphor/UML/elementfactory.py
 gaphor/UML/diagram.py
 gaphor/diagram/__init__.py
+gaphor/diagram/placementtool.py
 gaphor/diagram/actor.py
 gaphor/diagram/association.py
 gaphor/diagram/comment.py
 gaphor/diagram/commentline.py
 gaphor/diagram/dependency.py
 gaphor/diagram/diagramitem.py
-gaphor/diagram/diagramitemfactory.py
+gaphor/diagram/feature.py
 gaphor/diagram/generalization.py
+gaphor/diagram/klass.py
 gaphor/diagram/metaitem.py
 gaphor/diagram/modelelement.py
 gaphor/diagram/package.py
 gaphor/diagram/relationship.py
 gaphor/diagram/usecase.py
 gaphor/ui/__init__.py
+gaphor/ui/abstractwindow.py
+gaphor/ui/commandregistry.py
 gaphor/ui/diagramview.py
-gaphor/ui/namespace.py
-gaphor/ui/placementtool.py
-gaphor/ui/treeview.py
-gaphor/ui/mainwindow.py
 gaphor/ui/diagramwindow.py
+gaphor/ui/mainwindow.py
+gaphor/ui/namespace.py
 gaphor/ui/stock.py
 gaphor/ui/command/__init__.py
-gaphor/ui/command/about.py
+gaphor/ui/command/commandinfo.py
 gaphor/ui/command/diagram.py
-gaphor/ui/command/file.py
-gaphor/ui/command/tree.py
+gaphor/ui/command/diagramitem.py
+gaphor/ui/command/main.py
+gaphor/ui/command/mainpopup.py
 gaphor/misc/__init__.py
-gaphor/misc/GConf.py
+gaphor/misc/conf.py
 gaphor/misc/command.py
+gaphor/misc/logger.py
 gaphor/misc/menufactory.py
 gaphor/misc/signal.py
 gaphor/misc/singleton.py
